--- a/src/app/assets/styles/question.scss
+++ b/src/app/assets/styles/question.scss
@@ -18,11 +18,13 @@
     }
     .question-buttons {
         width:220px;
+        outline:0;
         margin:0 auto;
         button {
             margin:0px 5px;
             width:100px;
             height:30px;
+            outline:0;
             background:transparent;
             border:1px solid #000;
             &:first-child{
